# alicebot-store

./: README.md  adapters.json  bots.json  plugins.json  pyproject.toml  script.py  test.py
.github/ISSUE_TEMPLATE/: config.yml  publish_adapter.yaml  publish_bot.yaml  publish_plugin.yaml
.github/actions_scripts/: file.py  parse.py  test.py  utils.py
.github/workflows/: deploy.yaml  deploy.yml  validate.yml
src/: __init__.py  context.py  models.py  parse.py  test.py  utils.py
templates/: parse_failed.md  unexpected_error.md  validation_failed.md  validation_success.md
