[project]
name = "alicebot-store"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = []

[tool.pdm.dev-dependencies]
lint = ["ruff"]

[tool.ruff]
line-length = 88
select = ["ALL"]
ignore = [
  "C90",    # mccabe
  "FBT",    # flake8-boolean-trap
  "COM",    # flake8-commas
  "INP",    # flake8-no-pep420
  "T20",    # flake8-print
  "D415",   # First line should end with a period, question mark, or exclamation point
  "ANN101", # Missing type annotation for self
  "ANN102", # Missing type annotation for cls
  "BLE001", # Do not catch blind exception
  "RUF001", # String contains ambiguous
  "RUF002", # Docstring contains ambiguous
  "RUF003", # Comment contains ambiguous
]
target-version = "py39"

[tool.ruff.pydocstyle]
convention = "google"

[tool.pyright]
pythonVersion = "3.9"
pythonPlatform = "All"
typeCheckingMode = "strict"
